# goofits

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.mk  goofit.mk
cmake/Modules/: FindROOT.cmake
custom_fits/: BifPdf.cu  BifPdf.hh  CMakeLists.txt  LanPdf.cu  LanPdf.hh  Makefile  NovoPdf.cu  NovoPdf.hh  gputimer.cuh  own_pdf_fit.cu
easy_fits/: CMakeLists.txt  Makefile  dane.txt  gaussfit.cu  prod.txt  prodfit.cu  stepfit.cu  sum.txt  sumfit.cu
harder_fits/: CMakeLists.txt  Makefile  mixedfit.cu
my_fft/: CMakeLists.txt  Makefile  README.md  myfft.cu  myfft.h
test_fit/: CMakeLists.txt  Makefile  ParabolaPdf.cu  ParabolaPdf.hh  my_fit.cu
